--- a/website/headshots.html
+++ b/website/headshots.html
@@ -122,7 +122,7 @@
 
   <nav>
     <ul>
-      <li><a href="testactingsite.html">Home</a></li>
+      <li><a href="index.html">Home</a></li>
       <li><a href="headshots.html" class="active">Headshots</a></li>
       <li><a href="about.html">About</a></li>
       <li><a href="reel.html">Reel</a></li>
