--- a/website/about.html
+++ b/website/about.html
@@ -107,7 +107,7 @@
 
   <!-- Navigation menu -->
   <nav class="nav">
-	<div class="nav-circle"><a href="testactingsite.html">Home</a></div>
+	<div class="nav-circle"><a href="index.html">Home</a></div>
     <div class="nav-circle"><a href="headshots.html">Headshots</a></div>
     <div class="nav-circle"><a href="about.html">About</a></div>
     <div class="nav-circle"><a href="reel.html">Reel</a></div>
