--- a/contact.html
+++ b/contact.html
@@ -133,7 +133,7 @@
 
   <header><h1>Daniel Turanov</h1></header>
 <nav class="nav">
-	<div class="nav-circle"><a href="testactingsite.html">Home</a></div>
+	<div class="nav-circle"><a href="index.html">Home</a></div>
     <div class="nav-circle"><a href="headshots.html">Headshots</a></div>
     <div class="nav-circle"><a href="about.html">About</a></div>
     <div class="nav-circle"><a href="reel.html">Reel</a></div>
